--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -87,3 +87,6 @@ layout: default
     </div>
   {% endif %}
 </div>
+
+<!-- 添加 ClustrMaps 脚本 -->
+<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=4qa-OA4bUBYb5PJcaBfftcWEvFu5a9m8o6J9PGvD7CQ"></script>
