--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -89,25 +89,4 @@ layout: default
 </div>
 
 <!-- ClustrMaps 部分 -->
-<style>
-  :root {
-    --clustrmaps-max-width: 300px;
-    --clustrmaps-width: 50%;
-  }
-
-  #clustrmaps-widget {
-    width: var(--clustrmaps-width);
-    max-width: var(--clustrmaps-max-width);
-    margin: 0 auto;
-  }
-
-  @media (max-width: 200px) {
-    :root {
-      --clustrmaps-width: 30%;
-    }
-  }
-</style>
-
-<div id="clustrmaps-widget"></div>
-
-<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=4qa-OA4bUBYb5PJcaBfftcWEvFu5a9m8o6J9PGvD7CQ"></script>
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=4qa-OA4bUBYb5PJcaBfftcWEvFu5a9m8o6J9PGvD7CQ&cl=ffffff&w=a"></script>
