--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -88,22 +88,9 @@ layout: default
   {% endif %}
 </div>
 
-<!-- ClustrMaps 部分 -->
-<style>
-  #clustrmaps-widget {
-    width: 100%;
-    max-width: 200px; /* 你可以根据需要调整这个值 */
-    margin: 0 auto;
-    overflow: hidden;
-  }
-  #clustrmaps-widget iframe {
-    width: 100% !important;
-    height: 200px !important; /* 固定高度,可以根据需要调整 */
-    border: none;
-  }
-</style>
-
-<!-- ClustrMaps 地球仪容器 -->
-<div id="clustrmaps-widget">
-  <iframe src="//clustrmaps.com/map_v2.png?d=4qa-OA4bUBYb5PJcaBfftcWEvFu5a9m8o6J9PGvD7CQ&cl=ffffff" style="border:none;"></iframe>
+  
+  <!-- 新的ClustrMaps嵌入代码 -->
+  <div style="width: 100%; text-align: center; margin-top: 20px;">
+    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=150&t=n&d=4qa-OA4bUBYb5PJcaBfftcWEvFu5a9m8o6J9PGvD7CQ&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+  </div>
 </div>
