--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -89,8 +89,23 @@ layout: default
 </div>
 
   
-  <!-- 新的ClustrMaps嵌入代码 -->
-  <div style="width: 100%; text-align: center; margin-top: 20px;">
-    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=150&t=n&d=4qa-OA4bUBYb5PJcaBfftcWEvFu5a9m8o6J9PGvD7CQ&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
-  </div>
+<!-- ClustrMaps 容器 -->
+<div id="clustrmaps-container" style="width: 100%; max-width: 300px; margin: 20px auto;">
+  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=4qa-OA4bUBYb5PJcaBfftcWEvFu5a9m8o6J9PGvD7CQ&cl=ffffff&w=a"></script>
 </div>
+
+<style>
+  #clustrmaps-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 宽高比 */
+    height: 0;
+    overflow: hidden;
+  }
+  #clustrmaps-container > script {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+</style>
