--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -91,7 +91,7 @@ layout: default
   
 <!-- ClustrMaps 容器 -->
 <div id="clustrmaps-container" style="width: 100%; max-width: 750px; margin: 110px auto;">
-  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=4qa-OA4bUBYb5PJcaBfftcWEvFu5a9m8o6J9PGvD7CQ&cl=ffffff&w=a"></script>
+  <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=4qa-OA4bUBYb5PJcaBfftcWEvFu5a9m8o6J9PGvD7CQ&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
 </div>
 
 <style>
